@@ -1,4 +1,5 @@
   * A fix to be not so picky about colorizing grass
+  * A fix which prevents a crash while in Explored Highlighting mode
 
 Minecraft X-Ray 2.7 Maintenance Branch 10 (2011.03.15)
 
